--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exercises\Exercise1.cs" />
+    <Compile Include="Exercises\Exercise2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
