--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Exercises\Exercise1.cs" />
     <Compile Include="Exercises\Exercise2.cs" />
+    <Compile Include="Exercises\Exercise3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
