--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Exercises\Exercise1.cs" />
     <Compile Include="Exercises\Exercise2.cs" />
     <Compile Include="Exercises\Exercise3.cs" />
+    <Compile Include="Exercises\Exercise4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
