--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Exercises\Exercise2.cs" />
     <Compile Include="Exercises\Exercise3.cs" />
     <Compile Include="Exercises\Exercise4.cs" />
+    <Compile Include="Exercises\Exercise5.cs" />
+    <Compile Include="Exercises\Exercise6.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
