--- a/Exercises/Exercises.csproj
+++ b/Exercises/Exercises.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Exercises\Exercise4.cs" />
     <Compile Include="Exercises\Exercise5.cs" />
     <Compile Include="Exercises\Exercise6.cs" />
+    <Compile Include="Exercises\Exercise7.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
